<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/radio_group_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/french"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/english"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            android:textSize="16sp" />
    </RadioGroup>
</LinearLayout>